force-app/main/default/objects/cuda_signnow__SNTemplate__c/cuda_signnow__SNTemplate__c.object-meta.xml
<CustomObject>
    <description>Table containing SignNow templates &amp; meta data.</description>
    <label>SNTemplate</label>
    <nameField>
        <label>SNTemplate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SNTemplates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>