force-app/main/default/objects/cuda_signnow__SNTemplate__c/fields/cuda_signnow__active__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__active__c</fullName>
    <defaultValue>1</defaultValue>
    <label>active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>