force-app/main/default/objects/cuda_signnow__SNTemplate__c/fields/cuda_signnow__contains_fields__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__contains_fields__c</fullName>
    <label>contains_fields</label>
    <length>5</length>
    <type>Text</type>
</CustomField>