force-app/main/default/objects/cuda_signnow__SNTemplate__c/fields/cuda_signnow__document_id__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__document_id__c</fullName>
    <description>SignNow Document Id (unique)</description>
    <inlineHelpText>SignNow Document Id</inlineHelpText>
    <label>document_id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>