force-app/main/default/objects/cuda_signnow__SNTemplate__c/fields/cuda_signnow__document_owner__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__document_owner__c</fullName>
    <description>Document owner</description>
    <label>document_owner</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>