force-app/main/default/objects/cuda_signnow__SNTemplate__c/fields/cuda_signnow__sf_owner_signnow_user_id__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__sf_owner_signnow_user_id__c</fullName>
    <description>The SignNow unique user id corresponding with the Salesforce record owner.</description>
    <inlineHelpText>SignNow user id</inlineHelpText>
    <label>sf_owner_signnow_user_id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>