force-app/main/default/objects/cuda_signnow__SNTemplate__c/fields/cuda_signnow__team_template__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__team_template__c</fullName>
    <description>Team Template</description>
    <label>team_template</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>