force-app/main/default/objects/cuda_signnow__SNTemplate__c/fields/cuda_signnow__updated__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__updated__c</fullName>
    <description>Updated</description>
    <label>updated</label>
    <length>20</length>
    <type>Text</type>
</CustomField>